Adding background image/styling

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 83px;
-  /* Offset for sticky header */
 }
 
 body {
@@ -58,6 +57,22 @@ nav {
   border-radius: 50%;
   width: 200px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+#hero{
+  width: 100%;
+  height: 450px;
+}
+
+#hero::before{
+  content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-image: url("images/Durham_light_lines.svg?v=highres");
+  opacity: 0.5;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
 }
 
 .btn {
@@ -154,11 +169,15 @@ footer p {
   color: white;
 }
 
+.dark-mode #hero::before{
+  background-image: url("images/Durham_Dark_blue.svg");
+  opacity: 0.5;
+}
+
 .dark-mode .project-card {
   background: #222;
   box-shadow: 0 2px 6px rgba(255, 255, 255, 0.1);
   border: 1px solid #444;
-  /* Optional: adds definition since bg matches body */
 }
 
 .dark-mode footer {
